--- a/Styles/main.css
+++ b/Styles/main.css
@@ -20,7 +20,7 @@ header {
 
 header .headercontainer {
   width: 100%;
-  max-width: 1320px;
+  max-width: 68.75%;
   margin: 0 auto;
 }
 
@@ -66,7 +66,7 @@ header .headercontainer .searchbutton {
 
 .intro .container {
   width: 100%;
-  max-width: 1320px;
+  max-width: 68.75%;
   margin: 0 auto;
   background-color: #e0e0e0;
   border-radius: 15px;
@@ -112,18 +112,18 @@ header .headercontainer .searchbutton {
 }
 
 .intro .gamelist {
-  width: 1260px;
+  width: 95.5%;
   height: 70%;
   margin-left: 25px;
   display: grid;
   gap: 25px 25px;
-  grid-template-columns: 615px 615px;
-  grid-auto-rows: 250px;
+  grid-template-columns: 48.8% 48.8%;
+  grid-auto-rows: 21%;
 }
 
 .intro .gamelist .game {
-  width: 615px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
   margin-top: 10px;
   background-color: #ffffff;
   border-radius: 15px;
@@ -184,8 +184,8 @@ h3 {
 .intro .gamelist .game .ratings .grade {
   margin-top: 30%;
   border-radius: 20px;
-  height: 34%;
   width: 100%;
+  aspect-ratio: 1/1;
   background-color: #43a4ff;
   color: #ffffff;
   text-align: center;
